<resources>
    <string name="app_name">Your Age in Minutes</string>
    <string name="in_minutes_till_today">In minutes till Today</string>
    <string name="selected_date">Selected Date</string>
    <string name="calculate_your">CALCULATE YOUR</string>
    <string name="age">AGE</string>
    <string name="button">SELECT DATE</string>
    <string name="in_minutes">IN MINUTES</string>
    <string name="todo">TODO</string>

</resources>